--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.h2.console.enabled=true
 
 server.port=8081
 spring.application.name=order-service
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8762/eureka/
+eureka.instance.hostname=localhost
